@@ -1,3 +1,3 @@
-1. switch between fullscreen and normal can cause titile bar error
+1. switch between fullscreen and normal can cause title bar error
 2. rectangle copy
 3. mem leak?
