@@ -1,3 +1,15 @@
+2004/05/14
+	fix
+	1. crash when exception popups in script
+	
+2004/05/12
+	fix
+	1. dividend of 0 in popwidget.cpp
+	2. empty schema crash
+	3. new implementation of QTermConfig by cppgx.bbs@smth.org,
+	fixing the memory leak.
+	4. various conditional compiling for MacOSX
+	
 2004/02/19
 	add
 	1. SSH1 support
